fix(02-documentation-serving): revise plans based on checker feedback

--- a/.planning/phases/02-documentation-serving/02-01-PLAN.md
+++ b/.planning/phases/02-documentation-serving/02-01-PLAN.md
@@ -97,6 +97,8 @@ Manually verify the logic: `resolveRepoRoot()` should find the repo root 2 direc
   <name>Task 2: Create document registry with inventory, metadata, loading, and search</name>
   <files>mcp/data/doc-registry.ts</files>
   <action>
+COMPLETE SPECIFICATION FOLLOWS -- implement exactly as specified below, including all types, all registry entries, all functions, and the search algorithm.
+
 Create `mcp/data/doc-registry.ts` exporting the following types and functions:
 
 **Types:**
