--- a/.planning/phases/02-documentation-serving/02-02-PLAN.md
+++ b/.planning/phases/02-documentation-serving/02-02-PLAN.md
@@ -75,8 +75,8 @@ Source files to understand existing patterns:
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Create doc resources and doc tools, update server, remove placeholders</name>
-  <files>mcp/resources/docs.ts, mcp/tools/docs.ts, mcp/server.ts, mcp/resources/placeholder.ts, mcp/tools/placeholder.ts</files>
+  <name>Task 1: Create doc resources and doc tools modules</name>
+  <files>mcp/resources/docs.ts, mcp/tools/docs.ts</files>
   <action>
 **Create `mcp/resources/docs.ts`:**
 
@@ -194,14 +194,30 @@ Export a function `registerDocTools(server: McpServer): void` that registers:
 
 At the top of the function, call `buildRegistry(resolveRepoRoot())`.
 
+**Also include the hoist-ping tool** in this file -- it's useful for connectivity testing. Register it alongside the doc tools so the placeholder file can be deleted in Task 2.
+
 Import from:
 - `@modelcontextprotocol/sdk/server/mcp.js` -- `McpServer`
 - `zod` -- `z`
 - `../data/doc-registry.js` -- `buildRegistry`, `searchDocs`, `DocCategory`
 - `../util/paths.js` -- `resolveRepoRoot`
+  </action>
+  <verify>
+1. `npx tsc --project mcp/tsconfig.json --noEmit` passes cleanly (note: placeholder files still exist and server.ts still imports them -- that's fine, this task only creates new files).
+2. Verify both files exist: `ls mcp/resources/docs.ts mcp/tools/docs.ts`
+3. Verify exports: `grep -n 'export' mcp/resources/docs.ts mcp/tools/docs.ts`
+  </verify>
+  <done>
+- `mcp/resources/docs.ts` exists and exports `registerDocResources` with doc-index, conventions, and hoist-doc template resources
+- `mcp/tools/docs.ts` exists and exports `registerDocTools` with hoist-search-docs, hoist-list-docs, and hoist-ping tools
+- Both files type-check cleanly
+  </done>
+</task>
 
-**Also keep the hoist-ping tool** -- it's useful for connectivity testing. Move it into `mcp/tools/docs.ts` or keep `mcp/tools/placeholder.ts` for it. Simplest: include hoist-ping registration in `registerDocTools` alongside the doc tools, and delete `mcp/tools/placeholder.ts`.
-
+<task type="auto">
+  <name>Task 2: Wire doc modules into server and remove placeholders</name>
+  <files>mcp/server.ts, mcp/resources/placeholder.ts, mcp/tools/placeholder.ts</files>
+  <action>
 **Update `mcp/server.ts`:**
 
 Replace placeholder imports with doc imports:
@@ -210,31 +226,44 @@ import {registerDocResources} from './resources/docs.js';
 import {registerDocTools} from './tools/docs.js';
 ```
 
-Call `registerDocResources(server)` and `registerDocTools(server)` instead of the placeholder functions.
+Call `registerDocResources(server)` and `registerDocTools(server)` instead of the placeholder registration functions.
+
+Remove the old imports:
+```typescript
+// DELETE these lines:
+import {registerPlaceholderResources} from './resources/placeholder.js';
+import {registerPlaceholderTools} from './tools/placeholder.js';
+```
+
+And remove the old calls:
+```typescript
+// DELETE these lines:
+registerPlaceholderResources(server);
+registerPlaceholderTools(server);
+```
 
 **Delete placeholder files:**
-- Delete `mcp/resources/placeholder.ts`
-- Delete `mcp/tools/placeholder.ts`
+- Delete `mcp/resources/placeholder.ts` using `rm`
+- Delete `mcp/tools/placeholder.ts` using `rm`
 
-These are replaced by the doc-serving modules. The hoist-ping tool should be preserved (moved into docs.ts or a separate utility tools file).
+These are fully replaced by the doc-serving modules. The hoist-ping tool was preserved in `mcp/tools/docs.ts` (Task 1).
   </action>
   <verify>
 1. `npx tsc --project mcp/tsconfig.json --noEmit` passes cleanly.
 2. Start the MCP server and verify it starts without errors: `node --import tsx mcp/server.ts 2>&1 | head -5` (should show the startup log message on stderr, then hang waiting for client).
-3. Verify placeholder files are deleted.
-4. Verify `mcp/server.ts` imports from docs modules, not placeholders.
+3. Verify placeholder files are deleted: `ls mcp/resources/placeholder.ts mcp/tools/placeholder.ts` should fail.
+4. Verify `mcp/server.ts` imports from docs modules, not placeholders: `grep 'placeholder' mcp/server.ts` should return nothing.
   </verify>
   <done>
-- `mcp/resources/docs.ts` registers doc-index, conventions, and hoist-doc template resources
-- `mcp/tools/docs.ts` registers hoist-search-docs and hoist-list-docs tools (plus hoist-ping)
-- `mcp/server.ts` imports and calls the new registration functions
+- `mcp/server.ts` imports and calls `registerDocResources` and `registerDocTools`
 - Placeholder files deleted
 - MCP server starts cleanly and type-checks without errors
+- No references to placeholder modules remain
   </done>
 </task>
 
 <task type="checkpoint:human-verify" gate="blocking">
-  <name>Task 2: Verify MCP documentation serving with Claude Code</name>
+  <name>Task 3: Verify MCP documentation serving with Claude Code</name>
   <files>none</files>
   <action>
 Human verification checkpoint. The MCP server should already be registered with Claude Code from Phase 1. Restart the MCP server to pick up the new tools and resources, then verify in a fresh Claude Code session.
